styling app now

--- a/angular_front/app/documents/documents.component.html
+++ b/angular_front/app/documents/documents.component.html
@@ -1,21 +1,10 @@
-<h1> {{pageTitle}} </h1>
 
-<div *ngFor="let doc of documents">
-  <h3>{{ doc.title }}</h3>
-
-  <em> {{ doc.description }} </em>
-
-  <div>
-    <a href="/{{ doc.file_url }}" >Download File</a>
+<div *ngFor="let doc of documents" class="card mb-3">
+  <h1 class="headline">{{pageTitle}}></h1>
+  <img class="card-img-top" src="{{doc.image_url}}"  alt="Card image cap" width="80%">
+  <div class="card-block">
+    <h4 class="card-title">{{doc.title}}</h4>
+    <p class="card-text">{{ doc.description }}</p>
+    <p class="card-text"><small class="text-muted">Updated at: {{ doc.updated_at }}</small></p>
   </div>
-
-  <p>
-    {{ doc.updated_at }}
-  </p>
-
-  <p>
-    {{ doc.image_url }}
-  </p>
-  <hr>
-
 </div>
