--- a/angular_front/app/homepage/homepage.component.html
+++ b/angular_front/app/homepage/homepage.component.html
@@ -1,2 +1,6 @@
-<h1>Homepage</h1>
-<p> welcome to the great new dashboard</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1> Freelancer Dashboard</h1>
+      <p class="lead"> All matters pertaining to your freelance business are managed here</p>
+  </div>
+</div>
