--- a/angular_front/app/proposal/proposal-new.component.html
+++ b/angular_front/app/proposal/proposal-new.component.html
@@ -7,6 +7,7 @@
             <div class="form-group">
               <label for="customer">Customer name</label>
               <input type="text"
+                class="form-control"
                 id="customer"
                 placeholder="ABC company"
                 required
@@ -21,6 +22,7 @@
           <div class="form-group">
             <label for="portfolio_url">Portfolio URL</label>
             <input type="text"
+                class="form-control"
                 id="portfolio_url"
                 required
                 name="portfolio_url"
@@ -34,6 +36,7 @@
             <div class="form-group">
               <label for="tools">Tools to use</label>
               <input type="text"
+                class="form-control"
                 id="tools"
                 placeholder="Ruby on Rails, Angular, etc"
                 required
@@ -48,6 +51,7 @@
           <div class="form-group">
             <label for="weeks_to_complete">Weeks to complete</label>
                 <input type="number"
+                  class="form-control"
                   id="weeks_to_complete"
                   required
                   name="weeks_to_complete"
@@ -61,6 +65,7 @@
           <div class="form-group">
             <label for="estimated_hours">Estimated Hours</label>
                 <input type="number"
+                  class="form-control"
                   id="estimated_hours"
                   required
                   name="estimated_hours"
@@ -73,12 +78,16 @@
           </div>
           <div class="form-group">
             <label for="hourly_rate">Hourly Rate</label>
-                <input type="number"
-                  id="hourly_rate"
-                  required
-                  name="hourly_rate"
-                  #hourly_rate='ngModel'
-                  [(ngModel)]="proposal.hourly_rate">
+              <div class="input-group">
+                <span class="input-group-addon">$</span>
+                  <input type="number"
+                    class="form-control"
+                    id="hourly_rate"
+                    required
+                    name="hourly_rate"
+                    #hourly_rate='ngModel'
+                    [(ngModel)]="proposal.hourly_rate">
+              </div>
               <div
                   [hidden]="hourly_rate.valid || hourly_rate.pristine" class="alert alert-danger">
                   Include hourly rate
@@ -87,6 +96,7 @@
           <div class="form-group">
             <label for="weeks_to_complete">Weeks to complete</label>
                 <input type="number"
+                  class="form-control"
                   id="weeks_to_complete"
                   required
                   name="weeks_to_complete"
@@ -100,6 +110,7 @@
           <div class="form-group">
             <label for="email">Client Email <em>Optional</em></label>
                 <input type="email"
+                  class="form-control"
                   id="clients_email"
                   name="clients_email"
                   #clients_email='ngModel'
@@ -134,7 +145,7 @@
               - able to learn quickly and keep up to date industry changes @ {{ proposal.hourly_rate }}
               - - - - -
               excellent communicator – must be comfortable talking with clients all over the world great at problem solving and trouble-shooting
-              team player @ {{ proposal.hourly_rate * proposal.estimated_hours }}
+              team player @ {{ proposal.hourly_rate * proposal.estimated_hours | currency:'GBP':true:'.01' }}
               able to plan and manage time effectively
               self motivated </p>
       </div>
