--- a/angular_front/app/proposal/proposal-show.component.html
+++ b/angular_front/app/proposal/proposal-show.component.html
@@ -1,6 +1,9 @@
-<h1> Proposal Show One </h1>
+<div class="container">
+  <div class="card proposal-card">
+    <h1> Proposal Show</h1>
+      <div>
+        The id for this proposal is {{ id }}
+      </div>
+  </div>
 
-
-<div>
-  This id for this proposal is {{ id }}
 </div>
