--- a/angular_front/app/proposal/proposal-new.component.html
+++ b/angular_front/app/proposal/proposal-new.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-6">
       <h1> Create proposal </h1>
         <div>
-          <form #proposalForm="ngForm">
+          <form (ngSubmit)="createProposal(proposal)"  #proposalForm="ngForm">
             <div class="form-group">
               <label for="customer">Customer name</label>
               <input type="text"
@@ -46,20 +46,6 @@
               <div
                 [hidden]="tools.valid || tools.pristine">
                 Provide all tools to be used
-              </div>
-          </div>
-          <div class="form-group">
-            <label for="weeks_to_complete">Weeks to complete</label>
-                <input type="number"
-                  class="form-control"
-                  id="weeks_to_complete"
-                  required
-                  name="weeks_to_complete"
-                  #weeks_to_complete='ngModel'
-                  [(ngModel)]="proposal.weeks_to_complete">
-              <div
-                  [hidden]="weeks_to_complete.valid || weeks_to_complete.pristine">
-                  Include weeks to be completed
               </div>
           </div>
           <div class="form-group">
@@ -116,6 +102,12 @@
                   #clients_email='ngModel'
                   [(ngModel)]="proposal.clients_email">
           </div>
+
+          <button type="submit" class="btn btn-outline-primary btn-lg"
+            [disabled]="!proposalForm.form.valid"
+            [hidden]="submitted"
+            >Generate Proposal
+          </button>
         </form>
       </div>
     </div>
