--- a/angular_front/app/proposal/proposal-new.component.html
+++ b/angular_front/app/proposal/proposal-new.component.html
@@ -108,6 +108,11 @@
             [hidden]="submitted"
             >Generate Proposal
           </button>
+
+          <div [hidden]="!submitted" class="alert alert-success" role="alert">
+                Your proposal has been generated
+                <a class="alert-link" routerLink="/proposals">View all proposals</a>
+          </div>
         </form>
       </div>
     </div>
